force-app/main/default/objects/Payment_Milestone__c/Payment_Milestone__c.object-meta.xml
<CustomObject>
    <description>Auto-generated payment milestones per event. 30/40/30 for Corporate, 50/50 for Social.</description>
    <label>Payment Milestone</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>