force-app/main/default/objects/Payment_Milestone__c/fields/Gateway_Tx_ID__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Tx_ID__c</fullName>
    <description>Transaction ID returned by payment gateway</description>
    <label>Gateway Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>