force-app/main/default/objects/Payment_Milestone__c/fields/Invoice_Ref__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Ref__c</fullName>
    <label>Invoice Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>