force-app/main/default/objects/Payment_Milestone__c/fields/Is_Invoiced_or_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoiced_or_Paid__c</fullName>
    <formula>OR(
     ISPICKVAL(Status__c, &quot;Invoiced&quot;),
     ISPICKVAL(Status__c, &quot;Paid&quot;)
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Invoiced or Paid</label>
    <type>Checkbox</type>
</CustomField>