force-app/main/default/objects/Payment_Milestone__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Mid-Event</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>