force-app/main/default/objects/Payment_Milestone__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Set when Status is changed to Paid</description>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>