force-app/main/default/objects/Payment_Milestone__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <description>Generated by payment gateway integration (Epic 3)</description>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>