force-app/main/default/objects/Payment_Milestone__c/fields/Payment_Link_Generated__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Generated__c</fullName>
    <description>Timestamp when payment link was created</description>
    <label>Payment Link Generated</label>
    <type>DateTime</type>
</CustomField>