force-app/main/default/objects/Payment_Milestone__c/fields/Waiver_Approved__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set ONLY by Approval Process when waiver is approved. Used in validation to block direct waiving without approval.</description>
    <label>Waiver_Approved</label>
    <type>Checkbox</type>
</CustomField>