force-app/main/default/objects/Payment_Milestone__c/fields/Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Reason__c</fullName>
    <description>Required when Status = Waived — enforced by Validation Rule</description>
    <label>Waiver Reason</label>
    <type>TextArea</type>
</CustomField>