force-app/main/default/objects/Payment_Milestone__c/validationRules/Block_Waived.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Waived</fullName>
    <active>true</active>
    <description>Block_Waived_Without_Approval</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Waived&apos;),
NOT(Waiver_Approved__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A milestone cannot be waived without manager approval. Please submit a waiver approval request first.</errorMessage>
</ValidationRule>