force-app/main/default/objects/Payment_Milestone__c/validationRules/Lock_Paid_Milestone.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Paid_Milestone</fullName>
    <active>true</active>
    <description>Block editing the Percentage if Status = Paid. Prevents the formula from changing a paid milestone&apos;s effective amount if Quoted Price changes.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Paid&apos;),
ISCHANGED(Percentage__c)
)</errorConditionFormula>
    <errorDisplayField>Percentage__c</errorDisplayField>
    <errorMessage>The percentage of a paid milestone cannot be changed.</errorMessage>
</ValidationRule>