force-app/main/default/objects/Payment_Milestone__c/validationRules/Waiver_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Waiver_Reason</fullName>
    <active>true</active>
    <description>Waiver Reason required before setting Waived</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Waived&apos;), ISBLANK(Waiver_Reason__c))</errorConditionFormula>
    <errorDisplayField>Waiver_Reason__c</errorDisplayField>
    <errorMessage>Waiver Reason is required before waiving a milestone</errorMessage>
</ValidationRule>